--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -13,19 +13,21 @@
 
 
 .navigation {
+    height: 85px;
     display: flex;
     gap: 10px;
     padding: 20px;
     background: #f8fafc;
     border-bottom: 1px solid #e2e8f0;
-    width: inherit; 
+    width: 100%; 
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
     top: 0;
-    position: sticky;
+    position: fixed;
     z-index: 1000;
     margin: 0;
     transition: all 0.5s ease;
+    background-color: rgb(204, 204, 204);
 }
 
 
